@@ -39,7 +39,7 @@
 %
 % How the grammar works
 %
-Qucs uses plain-text (ASCII) files as its input and tranfer format for
+Qucs uses plain-text (ASCII) files as its input and transfer format for
 netlists and data. This appendix explains the file formats by
 describing the grammars of the languages used. The files are generally
 line-oriented but arbitrary whitespace between the token is
