@@ -27,8 +27,8 @@
                            \ntok{Num} \tok{\gt} \ntok{Eol}}
 \end{grammar}
 
-The file contains of a header line indicating the software version and
-a number of Variables.
+The file consists of a header line indicating the software version and
+a number of variables.
 
 %
 % Data
@@ -44,6 +44,10 @@ a number of Variables.
 \end{grammar}
 
 The \ntok{Float} values itself may be scattered over several lines.
+An independent variable denotes a list of real or complex values.  The
+dependent variables denote lists of real or complex values depending
+on independent variables, i.e. a function of some other variable,
+a $f(x,\ldots )$ in mathematical terms.
 
 %
 % Lexical structure
