@@ -23,7 +23,8 @@
 \orproduces{SubcircuitBody}
 \orproduces{EquationLine}
 \orproduces{ActionLine}
-\orproduces{\tok{\#} \group{\em Entire line is comment} \ntok{Eol}}
+\orproduces{\opt{\tok{\#} \group{\em Entire line is comment}}
+            \ntok{Eol}}
 \end{grammar}
 
 A netlist is read in a line-based fashion. There are several types of
@@ -56,7 +57,7 @@ parameters for a property.
 \orproduces{SubcircuitBody}
 \orproduces{\ntok{Eol}}
 
-\produces{DefEnd}{\tok{.} \tok{Def} \tok{:} \tok{End}}
+\produces{DefEnd}{\tok{.} \tok{Def} \tok{:} \tok{End} \ntok{Eol}}
 \end{grammar}
 
 Subcircuits are recursively defined by blocks of component
