@@ -1,7 +1,7 @@
 /*
  * capacitor.cpp - capacitor class implementation
  *
- * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004, 2005 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: capacitor.cpp,v 1.14 2004/11/24 19:15:47 raimi Exp $
+ * $Id: capacitor.cpp,v 1.15 2005/02/21 20:52:48 raimi Exp $
  *
  */
 
