@@ -1,3 +1,8 @@
+2005-02-19  Stefan Jahn  <stefan@lkcc.org>
+
+	* grammar-data.tex (section{Qucs dataset grammar}): Added
+	a small comment about dataset content.
+
 2005-02-17  Raimund 'Raimi' Jacob  <raimi@lkcc.org>
 
 	* grammar-data.tex: Added grammar for the dataset. Put all
